--- a/17-express-contact-app/views/contact.ejs
+++ b/17-express-contact-app/views/contact.ejs
@@ -2,7 +2,13 @@
   <div class="row">
     <div class="col-md-8">
       <h2>Contact List</h2>
-      <a href="/contact/add" class="btn btn-primary badge m-2">Add Contact</a>
+      <% if (msg.length !== 0) { %>
+        <div class="alert alert-success" role="alert">
+          <%= msg %> 
+        </div>
+      <% } %>
+      <a href="/contact/add" class="btn btn-primary badge m-2"><i class="bi bi-person-plus"></i> Add Contact</a>
+      
       <table class="table table-hover">
         <thead>
           <tr>
@@ -30,7 +36,7 @@
             <td><%= contact.nama %></td>
             <td><%= contact.nohp %></td>
             <td>
-              <a href="/contact/<%= contact.id %> " class="btn badge rounded-pill bg-primary"><i class="bi bi-info-circle-fill"></i> Detail</a>
+              <a href="/contact/<%= contact.id %> " class="btn badge rounded-pill bg-success"><i class="bi bi-info-circle"></i> Detail</a>
             </td>
           </tr>
           <% }) %>
