--- a/17-express-contact-app/views/contact.ejs
+++ b/17-express-contact-app/views/contact.ejs
@@ -24,7 +24,7 @@
             <tr>
               <td colspan="4">
                 <div class="alert alert-warning" role="alert">
-                  Data kontak kosong ! <a href="#" class="alert-link">Silahkan klik</a> untuk menambah kontak baru.
+                  Data kontak kosong ! <a href="/contact/add" class="alert-link">Silahkan klik</a> untuk menambah kontak baru.
                 </div>
               </td>
             </tr>
