--- a/17-express-contact-app/views/layouts/main-layout.ejs
+++ b/17-express-contact-app/views/layouts/main-layout.ejs
@@ -14,7 +14,7 @@
     <title><%- title %> </title>
     
     <!-- My CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
   </head>
   <body>
       <%- include('nav') %> 
